<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
    <RelativeLayout 
	    android:layout_width="match_parent"
		android:id="@+id/start_layout"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
		>	
    <TextView
        android:id="@+id/calinstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/calculation_instruction" />
     <TextView
         android:id="@+id/course_code_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/calinstruction"
         android:layout_below="@+id/calinstruction"
         android:layout_marginTop="14dp"
         android:text="@string/course_code" />
     <EditText
         android:id="@+id/course_code_et_0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/course_code_tv"
         android:layout_below="@+id/course_code_tv"
         android:ems="7"
         android:hint="@string/course_code_sample"
         android:inputType="text"
         android:singleLine="true" />
     <TextView
         android:id="@+id/mark_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/course_code_tv"
         android:layout_alignBottom="@+id/course_code_tv"
         android:layout_marginLeft="21dp"
         android:layout_toRightOf="@+id/course_code_et_0"
         android:text="@string/mark" />

     <EditText
         android:id="@+id/mark_et_0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/mark_tv"
         android:layout_alignLeft="@+id/mark_tv"
         android:ems="5"
         android:hint="@string/mark_sample"
         android:inputType="number" />
     
     
     <Button
         android:id="@+id/add"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
         android:layout_alignLeft="@+id/course_code_et_0"
         android:text="@string/add_button" />

     <Button
         android:id="@+id/submit"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/mark_et_0"
         android:layout_alignBaseline="@+id/add"
         android:onClick="Submit_GPA"
         android:text="@string/submit_button" />
	
	<Button
         android:id="@+id/remove"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/add"
         android:layout_alignBaseline="@+id/add"
         android:textSize="25sp"
         android:text="@string/remove_button" />
		
	<!--         android:layout_alignRight="@+id/course_code_et_0"  -->
	

</RelativeLayout>
</ScrollView>